--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<h3><a href="../index.html">Parent Directory</a></h3>
 	<h3><a href="expression.html">expression</a></h3>
 	<h3><a href="pronunciation/pronunciations.html">pronunciations</a></h3>
-	<h3><a href="500.html">500</a></h3>
-	<h3><a href="../Healthy/meditation.html">meditation</a></h3>
+	<h3><a href="Healthy/meditation.html">meditation</a></h3>
 	<h3><a href="Western Civilization/index.html">Western Civilization</a></h3>
 	<h3><a href="raw.html">raw</a></h3>
 	<h3><a href="grammar/index.html">grammar</a></h3>
