--- a/Healthy/index.html
+++ b/Healthy/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Sherwin-Health</title>
+		<style>body {background: rgb(193, 230, 198) !important;}</style>
 </head>
 <body align="center">
+	<h3><a href="Sherwin Healthy.html">Sherwin Healthy</a></h3>
+	<h3><a href="healthy.html">healthy</a></h3>
 	<h3><a href="Powerful.html">Powerful</a></h3>
 	<h3><a href="make yourself healthy.html">make yourself healthy</a></h3>
 	<h3><a href="military method.html">military method</a></h3>
