--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<h3><a href="../index.html">Parent Directory</a></h3>
 	<h3><a href="expression.html">expression</a></h3>
 	<h3><a href="pronunciation/pronunciations.html">pronunciations</a></h3>
-	<h3><a href="Healthy/meditation.html">meditation</a></h3>
 	<h3><a href="Western Civilization/index.html">Western Civilization</a></h3>
-	<h3><a href="raw.html">raw</a></h3>
 	<h3><a href="grammar/index.html">grammar</a></h3>
 	<h3><a href="TED-Ed/index.html">TED-Ed</a></h3>
 	<h3><a href="ielts2/index.html">IELTS2</a></h3>
@@ -22,5 +20,7 @@
 	<h3><a href="friends/index.html">friends</a></h3>
 	<h3><a href="Critical Thinking/index.html">Critical Thinking</a></h3>
 	<h3><a href="method/Learning%20how%20to%20learn.html">Learning how to learn</a></h3>
+	<hr>
+	<h3><a href="Healthy/index.html">Healthy</a></h3>
 </body>
 </html>
