--- a/Healthy/Sherwin Healthy.html
+++ b/Healthy/Sherwin Healthy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-02 Tue 15:26 -->
+<!-- 2025-12-02 Tue 15:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -197,103 +197,43 @@
 </head>
 <body>
 <div id="content" class="content">
-<div id="outline-container-org2776375" class="outline-2">
-<h2 id="org2776375">耳鸣最佳的自愈方法——学会让你的中枢神经系统放松</h2>
-<div class="outline-text-2" id="text-org2776375">
-<p>
-我想再次强调一点，如果你正在经历耳鸣，并且已经去医院排除了各种器质病变引起的耳鸣，那么多半你的耳鸣是因为你的中枢神经系统过度紧张导致的。<br />
-</p>
-
-<p>
-导致中枢神经系统过度紧张的原因有很多，比如：<br />
-</p>
-<ul class="org-ul">
-<li>长期熬夜，生活不规律<br /></li>
-<li>长期处于压力当中（有可能却不自知）<br /></li>
-<li>长期处于焦虑当中（有可能却不自知）<br /></li>
-<li>长期处于抑郁当中（有可能却不自知）<br /></li>
-<li>长期处于易怒，或者情绪容易爆发的状态<br /></li>
-<li>其它意外刺激<br /></li>
-</ul>
-
-<p>
-整天对耳鸣的成因去刨根问底，是没有意义的，这只会加重你的中枢神经系统（central nervous system）的兴奋程度，一旦提及耳鸣，你的中枢神经系统就会进入一种 <b>战斗或者逃跑模式(Fight or Flight)</b> ，变得高度兴奋，肾上腺素加速分泌，集中了所有注意力，而这也解释了为什么你越紧张，越恐慌，越去听，就会觉得耳鸣声音越大。<br />
-</p>
-
-<p>
-<b>人的中枢神经系统对危险的事物建立联系很快</b> ，比如你听到或者看到一个可怕的东西时，会很快开始紧张流汗做出反映。 <b>但是，要脱离联系却很慢，需要时间。这就是为什么一朝被蛇咬，十年怕井绳。</b> 这就意味着你要通过不断的训练，来断开自己中枢神经对“井绳—威胁”建立的联系，不然就只能一直这么害怕下去。而耳鸣也一样。如果不训练，就只能去习惯。问题是，我不觉得有任何一个耳鸣的人，有勇气立刻让自己从今天开始放弃抵抗，去学会适应，因为毕竟耳鸣很讨厌。<br />
-</p>
-
-<p>
-所以，想办法让你的中枢神经系统放松下来，才是治愈耳鸣的最好办法。 <b>注意，这里的放松，不是说放任不管，也不是死马当活马医，是你必须经过一些训练，才能达到效果。</b> 不然就只能变成别人所说的“慢慢去习惯耳鸣”，而这也是很多人耳鸣多年不愈的原因。<br />
-</p>
-
-<p>
-常见的训练方法有：<br />
-</p>
-<ol class="org-ol">
-<li>冥想，学会腹式呼吸<br /></li>
-<li>太极或者瑜伽<br /></li>
-<li>任何可以让你自己放松的身体按摩<br /></li>
-<li>做任何事都慢慢来，不要急性子，改改自己的脾气<br /></li>
-</ol>
-
-<p>
-以冥想为例，网上有很多的冥想教程，在此就不展开赘述了。如果你的耳鸣比较严重，可以在冥想的时候放一点大自然的音乐，有很多 App ，比如小睡眠之类的，都有类似的功能。音量以盖住你耳鸣声音的一半为宜，既可以听到耳鸣，又可以听到音乐。然后在冥想的过程中，听着自己的耳鸣，结合着音乐，慢慢让自己冷静下来，让你的中枢神经系统对这个声音不再那么活跃、那么兴奋。<br />
-</p>
-
-<p>
-当然，如果你的耳鸣不那么严重，就比如我本人，只要有一点点音乐声基本就听不到了，那么可以尝试不要放背景音乐来掩盖，就在冥想的过程中让自己直接听到。虽然这听起来很残酷，尤其是刚开始的时候可能会很难，但你要训练的就是让你的中枢神经系统对它不再畏惧，从而才能放松警戒。<br />
-</p>
-
-<p>
-我知道这些说起来容易，做起来难。但你必须知道，这些都需要时间，可能是几个礼拜，也有可能是几个月，甚至几年……随着你坚持的时间越长，你的中枢神经系统越冷静，慢慢地你就会发现耳鸣的声音越来越小，直至最终消失。换句话说，你越忽视它，越放它走，那么总有一天它也会放你走。<br />
-</p>
-
-<p>
-有人会说，“我也想放它走啊，但是耳鸣毕竟是一种声音，在你耳边嗡嗡嗡的总会听到啊。”这个时候就要提到我在之前一篇文章里讲到的“森田疗法”与“正念”的思想了。<br />
-</p>
-
-
-<p>
-正确的做法是： <b>不要刻意去听自己的耳鸣，也不要因为一天中的某一时刻听到自己的耳鸣而吓一跳，</b> 因为但凡有这两种情况，都代表着你内心还在乎它， <b>这会加重你的中枢神经对它的恐惧程度，进而再次进入战斗或者逃跑模式（Fight or Flight），这是不利于恢复的。</b> 我理解很多人会有那种体验，每天做着该做的事，突然耳鸣的声音袭来，然后整个人都陷入一种恐慌，竖起耳朵去听是不是，一听真的是自己耳鸣，然后就会感到失望与无助，仿佛今天一天又被耳鸣打倒了一般，接着掉进恐慌的陷阱，好久才能爬上来……千万不要这样，你要做到的是，每天不逃避耳鸣的声音，正视它，在听到它的时候，不对它作出任何回应，为所当为，不去做任何的评价，该干嘛干嘛。就像正在站台等车的你，耳鸣就是呼呼驶来的火车，你是要选择跳上火车跟它一起，陷入无止尽的恐慌当中；还是微微笑看着它停，再看着它走，决定权都在自己手上。<br />
-</p>
-
-<p>
-必须再一次强调：<br />
-</p>
-
-<ol class="org-ol">
-<li><b>这篇文章的目的不是要你从开始马上学会“习惯耳鸣”，而是应该在了解过耳鸣的原因与应对方案之后，先开始慢慢习惯，再配合一定的训练（比如冥想）来放松中枢神经，最后慢慢达到恢复的目的。</b><br /></li>
-<li><b>耳鸣的治疗不像感冒发烧或者其它疾病，它不是吃了药马上就可以好的。</b><br /></li>
-<li><b>不要有什么期待，仿佛你今天怎么做了之后，明天耳鸣就可以立刻好。不可能的，耳鸣的治愈永远是一个循序渐进的过程。</b><br /></li>
-<li><b>刚开始可能会很难，但当你越来越不在乎这个声音，你的中枢神经越来越对此事不再兴奋，往往这个时候，恢复就开始了。</b><br /></li>
-<li><b>还是那句话，不要乱在网上搜。除了吓到自己，没有好处。</b><br /></li>
-<li><b>全程必须保证积极可恢复的心态，因为消极的心态会加剧你中枢神经系统对耳鸣的恐慌程度。你相信自己会好，你才会好；你相信自己好不了，那好得了才怪了。</b><br /></li>
-<li><b>耳鸣是可以完全恢复的，完全恢复的定义是：在安静的地方也听不到任何声音！不用去纠结这是物理上的恢复还是心理上的恢复。</b><br /></li>
-</ol>
-
-<p>
-希望大家加油！<br />
-</p>
+<div id="outline-container-org9865faf" class="outline-2">
+<h2 id="org9865faf">todos daily</h2>
+<div class="outline-text-2" id="text-org9865faf">
+</div>
+<div id="outline-container-org44eb832" class="outline-3">
+<h3 id="org44eb832">11点半前睡觉,手机不入卧室</h3>
+</div>
+<div id="outline-container-org5e078ec" class="outline-3">
+<h3 id="org5e078ec">水杯随身带</h3>
+</div>
+<div id="outline-container-orge71314a" class="outline-3">
+<h3 id="orge71314a">零食吃水果</h3>
+</div>
+<div id="outline-container-orge49401f" class="outline-3">
+<h3 id="orge49401f">早餐牛奶+鸡蛋/包子</h3>
+</div>
+<div id="outline-container-orge3dba82" class="outline-3">
+<h3 id="orge3dba82">上班时</h3>
+<div class="outline-text-3" id="text-orge3dba82">
+</div>
+<div id="outline-container-org845b8f6" class="outline-4">
+<h4 id="org845b8f6">每小时站5分钟</h4>
+</div>
+<div id="outline-container-org3c06c42" class="outline-4">
+<h4 id="org3c06c42">上午可煅炼一次,下午煅炼两次</h4>
 </div>
 </div>
-<div id="outline-container-org5c9e46b" class="outline-2">
-<h2 id="org5c9e46b">Tinnitus from youtube</h2>
-<div class="outline-text-2" id="text-org5c9e46b">
-<p>
-诀窍就是去听声音.一旦你有足够的勇气,让自己去听它.<br />
-你越不想去听到它,但诀窍就是让自己去听它,但是不要精神恐慌.<br />
-当你的身体意识到这个声音不是危险的,当你开始放松,接下来慢慢地你的恐慌~和压力开始下降,你就越能放松地接受它(但不是马上).<br />
-后面就算你听到它了,你也比较能接受它了,然后就开始放松.<br />
-这样形成一个越听越放松,越放松越能接受它的这样机制.<br />
-大概几个礼拜,就会开始生效~产生变化.<br />
-</p>
-
-<p>
-我自己几周后发现一次比一次安静,几个月后几乎全好了.<br />
-它停下来,又开始了.然后又停掉,又出现&#x2026;最后就消失了.<br />
-</p>
+<div id="outline-container-orgc6bf33c" class="outline-3">
+<h3 id="orgc6bf33c">居家时</h3>
+<div class="outline-text-3" id="text-orgc6bf33c">
+</div>
+<div id="outline-container-org3f43eb2" class="outline-4">
+<h4 id="org3f43eb2">每小时绕家里走5圈</h4>
+</div>
+</div>
+<div id="outline-container-orgabf3eb7" class="outline-3">
+<h3 id="orgabf3eb7">周末户外</h3>
 </div>
 </div>
 </div>
