--- a/grammar/index.html
+++ b/grammar/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Grammar</title>
+		<style>body {background: rgb(193, 230, 198) !important;}</style>
 </head>
 <body align="center">
 	<h3><a href="../index.html">Parent Directory</a></h3>
