--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 	<h3><a href="method/Learning%20how%20to%20learn.html">Learning how to learn</a></h3>
 	<hr>
 	<h3><a href="Healthy/index.html">Healthy</a></h3>
+	<h3><a href="Healthy/Sherwin%20Healthy.html">Sherwin Healthy</a></h3>
 </body>
 </html>
